src/components/Loading/animations/BouncingBalls/BouncingBalls.module.scss
$offset: 40%;

@keyframes bounce {
  from {
    transform: translateY(0%);
  }

  to {
    transform: translateY($offset);
  }
}

.bouncing-balls {
  display: block;
  background: none;
  border: none;
  cursor: progress;
  transition: fill 300ms ease-out 0s;

  g {
    transform: translateY(-20%);
  }

  circle {
    transform: translateY($offset);
    animation-name: bounce;
    animation-duration: 600ms;
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    animation-play-state: running;
  }

  circle {
    &:nth-child(1) {
      animation-delay: 0ms;
    }
    &:nth-child(2) {
      animation-delay: 150ms;
    }
    &:nth-child(3) {
      animation-delay: 300ms;
    }
  }
}

